Rapid Prd/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Dedupe_Batch__c</fullName>
        <description>This is a temporary field created for Lead Deduplication and will be removed once the Deduplication process is completed.</description>
        <label>Dedupe Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_you_talk_to_a_Sales_Rep__c</fullName>
        <inlineHelpText>Did you talk to someone about RapidAdvance prior to submitting your application on the web?</inlineHelpText>
        <label>Did you talk to a Sales Rep.?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Attribution__c</fullName>
        <label>Direct Mail Attribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_belong_to_a_chamber_of_commerce__c</fullName>
        <label>Do you belong to a chamber of commerce?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_warehouse_or_storage__c</fullName>
        <label>Do you have a warehouse or storage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_accounts_receivable__c</fullName>
        <label>Do you have accounts receivable?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_in_DMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Documents are uploaded into DMS</description>
        <label>Docs in DMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Merchant_Own_Their_Building__c</fullName>
        <label>Does Merchant Own Their Building?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dynamic_Assignment__c</fullName>
        <formula>MOD(TODAY()-DATE(YEAR(TODAY()), 1, 1) + 1,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dynamic Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFax_Address__c</fullName>
        <defaultValue>&quot;1&quot;&amp;text(Fax2__c)&amp;&quot;@efaxsend.com&quot;</defaultValue>
        <description>This is for sending faxes via fax.com, Outlook...etc.</description>
        <label>EFax Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_App_for_Pardot__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>E-App for Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Application_Handler__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/e-Application/&quot;&amp; CASESAFEID(Id),Id)</formula>
        <label>E-Application Handler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Custom_Field__c</fullName>
        <description>Copy of the email standard field to update to other objects.</description>
        <label>Email Custom Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opened_Please_Call__c</fullName>
        <label>Email Opened - Please Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Present_Lead__c</fullName>
        <formula>if( CONTAINS(Email, &quot;@&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Present - Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Proprietorship</fullName>
                </value>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Parternship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_URL__c</fullName>
        <label>Entry URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Escalation_Checkbox__c</fullName>
        <formula>2&lt;(now()- Last_Call_Activity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Date__c</fullName>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Play__c</fullName>
        <label>Escalation Play</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Trigger__c</fullName>
        <label>Escalation Trigger</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for Escalation</description>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_Lead__c</fullName>
        <label>Expired Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Status__c</fullName>
        <label>External Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FL_Transfer_Datetime__c</fullName>
        <description>Field used to house the date time for the transfer checkbox</description>
        <label>Frontline_Transfer Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fax2__c</fullName>
        <label>Fax #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <inlineHelpText>Do not use spaces, dashes, or brackets in the fax number. Please enter as follows: 2405142010</inlineHelpText>
        <label>Fax Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID_Number__c</fullName>
        <label>Federal Tax ID Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_or_State_Tax_Liens__c</fullName>
        <label>Federal or State Tax Liens?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UNSURE</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filed_for_bankruptcy_del__c</fullName>
        <inlineHelpText>Has Principal declared bankruptcy within the last ten (10) years?</inlineHelpText>
        <label>Filed for bankruptcy?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9_Call_Counter__c</fullName>
        <label>Five9 Call Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9_Lead_List_ID__c</fullName>
        <label>Five9 Lead List ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Brad_Leads__c</fullName>
        <label>Flag Brad Leads</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Previous_Lead_Owner__c</fullName>
        <label>Flag Previous Lead Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Erick Guerrero</fullName>
                </value>
                <value>
                    <fullName>No One</fullName>
                </value>
                <value>
                    <fullName>Cleaned</fullName>
                </value>
                <value>
                    <fullName>Michael Massey</fullName>
                </value>
                <value>
                    <fullName>James Lang</fullName>
                </value>
                <value>
                    <fullName>Chris Payer</fullName>
                </value>
                <value>
                    <fullName>Jeff Hageman</fullName>
                </value>
                <value>
                    <fullName>Peter Havenstein</fullName>
                </value>
                <value>
                    <fullName>Brent Gardner</fullName>
                </value>
                <value>
                    <fullName>Michael Dodge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Tim_J_Leads__c</fullName>
        <label>Flag Tim J Leads</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Needed_Count__c</fullName>
        <formula>if(OR( ISPICKVAL( Status , &quot;Initial Call Needed&quot;),ISPICKVAL( Status , &quot;Awaiting Credit Card Statements&quot;),ISPICKVAL( Status , &quot;Follow Up Call Needed&quot;),ISPICKVAL( Status , &quot;Calling - No Contact Made&quot;),ISPICKVAL( Status , &quot;Pending Approval&quot;),ISPICKVAL( Status , &quot;Pending Quote&quot;),ISPICKVAL( Status , &quot;Open&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow Needed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frontline_Action__c</fullName>
        <formula>IF( 

AND( 
DateBusinessStarted__c &lt;= Today()- 90,
Gross_Monthly_Sales_Cur__c &gt;= 2000
)
 
,&quot;BOBA&quot;

,IF(Stated_FICO__c &gt;= 680

,&quot;Seek Capital&quot;,

IF(
AND(
Gross_Monthly_Sales_Cur__c &gt;= 15000, 
Business_Account__c = TRUE
)

, &quot;CSG - WARM&quot;

,IF(
Business_Account__c = TRUE

, &quot;CSG - API&quot;,&quot;Unqualified&quot;

))))</formula>
        <label>Frontline Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frontline_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frontline Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frontline_Broker_Out_Partner__c</fullName>
        <label>Frontline Broker Out Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Out Team</fullName>
                </value>
                <value>
                    <fullName>Fundbox</fullName>
                </value>
                <value>
                    <fullName>Seek Capital</fullName>
                </value>
                <value>
                    <fullName>CSG</fullName>
                </value>
                <value>
                    <fullName>Rocket Loans</fullName>
                </value>
                <value>
                    <fullName>Victory Tax</fullName>
                </value>
                <value>
                    <fullName>International Bancard</fullName>
                </value>
                <value>
                    <fullName>Worldpay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frontline_Lead_Disposition__c</fullName>
        <label>Frontline Lead Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn&apos;t Own a Business</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Wrong Person</fullName>
                </value>
                <value>
                    <fullName>Recycled Lead</fullName>
                </value>
                <value>
                    <fullName>Bogus Lead Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frontline_Tracking__c</fullName>
        <label>Frontline Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BA Unavailable</fullName>
                </value>
                <value>
                    <fullName>Client Hung Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frontline_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used by Frontline team members to indicate that they have transferred the lead to another BA.</description>
        <label>Frontline_Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frontline_User__c</fullName>
        <description>Who made the transfer?</description>
        <label>Frontline_User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_A__c</fullName>
        <formula>if(DateBusinessStarted__c &gt; TODAY(),5,7* SQRT(log(MIN(((TODAY() - DateBusinessStarted__c)/365),50)+1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function_B__c</fullName>
        <formula>1.3* EXP((0.15*ln(MIN(Gross_Monthly_Sales_Cur__c+1,500000))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function_C__c</fullName>
        <formula>10 - 0.5*MIN(Five9_Call_Counter__c,20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function_D__c</fullName>
        <formula>MAX(10-3*LOG(Now() - Lead_Created_Date__c + 1),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fundbox_search__c</fullName>
        <formula>IF(AND(
OR(Not Contains(Campaign_Name__c , &quot;Quicken&quot;), Not Contains (Campaign_Name__c, &quot;Rock Connections&quot;), Not Contains(Campaign_Name__c, &quot;Partner&quot;)),
OR(Contains(Company,&quot;Services&quot;), Contains(Company,&quot;Construction&quot;), Contains(Company,&quot;Truck&quot;), Contains(Company,&quot;Distribution&quot;),
Contains(Company,&quot;Transportation&quot;), Contains(Company,&quot;Concrete&quot;), Contains(Company,&quot;Paint&quot;))
),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FundboxSearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundingGroup__c</fullName>
        <formula>IF( OR(Campaign_Name__c = &apos;Website Free Quotes Link&apos;, Campaign_Name__c = &apos;Organic Search | Google&apos;, Campaign_Name__c = &apos;SEM | G | Brand | Exact&apos;, Campaign_Name__c = &apos;LendingTree - Tier 2&apos;, Campaign_Name__c = &apos;Buyerzone&apos;, Campaign_Name__c = &apos;IT Media - High FICOs&apos;, Campaign_Name__c = &apos;Quinstreet&apos;,  Campaign_Name__c = &apos;LendingTree&apos;,Campaign_Name__c = &apos;Copperline Capital, LLC&apos;, Campaign_Name__c = &apos;LendingTree PL Leads&apos;), 3,
IF( OR(Campaign_Name__c = &apos;Lower My Bills Lead Form&apos;, Campaign_Name__c = &apos;Lower My Bills&apos;, Campaign_Name__c = &apos;Credit Karma&apos;, Campaign_Name__c = &apos;Lower My Bills - Tier 2&apos;, Campaign_Name__c = &apos;IT Media - Not Self-Employed&apos;, Campaign_Name__c = &apos;Business.com - Loan&apos;),1,2
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Channel__c</fullName>
        <label>Funding Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_AdGroup__c</fullName>
        <description>Used for keyword analysis. Use utm_adgroup to identify a specific product promotion or strategic campaign.</description>
        <label>Google AdGroup</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Ad_Position__c</fullName>
        <description>the position on the page that your ad appeared in, with a value such as &quot;1t2&quot;, which is equivalent to page 1, top, pos 2</description>
        <label>Google Ad Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Device__c</fullName>
        <description>whether the click came from mobile (including WAP), tablet, or desktop or laptop computer (which will appear as &quot;m&quot;, &quot;t&quot;, and &quot;c,&quot; respectively)</description>
        <label>Google Device</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Insurace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Insurace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greg_Deal_Status__c</fullName>
        <label>Greg Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUPLICATE LEAD</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Follow Up Call Needed</fullName>
                </value>
                <value>
                    <fullName>Incomplete contact/company information</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Legitimate</fullName>
                </value>
                <value>
                    <fullName>Not qualified, Wrong SIC</fullName>
                </value>
                <value>
                    <fullName>Not the Owner</fullName>
                </value>
                <value>
                    <fullName>Quote submitted</fullName>
                </value>
                <value>
                    <fullName>Requested Information Only</fullName>
                </value>
                <value>
                    <fullName>Started application sent</fullName>
                </value>
                <value>
                    <fullName>Submitted to Partner</fullName>
                </value>
                <value>
                    <fullName>submitted to Partner-Starter Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greg_Partner_Final_Status__c</fullName>
        <label>Greg Partner Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>No Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greg_Success_Number__c</fullName>
        <label>Greg Success Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greg_Total_Lead_Success__c</fullName>
        <formula>value(text( Greg_Success_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greg Total Lead Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income__c</fullName>
        <label>Gross Monthly Income</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Sales_Cur__c</fullName>
        <label>Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Sales__c</fullName>
        <label>Gross Monthly Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 2,500</fullName>
                </value>
                <value>
                    <fullName>2,500 - 5,000</fullName>
                </value>
                <value>
                    <fullName>5,000 - 10,000</fullName>
                </value>
                <value>
                    <fullName>10,000 - 20,000</fullName>
                </value>
                <value>
                    <fullName>20,000 - 40,000</fullName>
                </value>
                <value>
                    <fullName>40,000 - 60,000</fullName>
                </value>
                <value>
                    <fullName>60,000 - 80,000</fullName>
                </value>
                <value>
                    <fullName>80,000 - 100,000</fullName>
                </value>
                <value>
                    <fullName>100,000 - 120,000</fullName>
                </value>
                <value>
                    <fullName>120,000 - 140,000</fullName>
                </value>
                <value>
                    <fullName>140,000 - 160,000</fullName>
                </value>
                <value>
                    <fullName>160,000 - 180,000</fullName>
                </value>
                <value>
                    <fullName>180,000 - 200,000</fullName>
                </value>
                <value>
                    <fullName>200,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_convicted_of_a_felony__c</fullName>
        <label>Have you ever been convicted of a felony</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home-Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>Label - removed ? mark (02/21/17)</description>
        <label>How did you hear about us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>Mag/Newspaper Ad</fullName>
                </value>
                <value>
                    <fullName>Mailer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post Card</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Statement/Bill Insert</fullName>
                </value>
                <value>
                    <fullName>TV Commercial</fullName>
                </value>
                <value>
                    <fullName>QLMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_acquire_customers__c</fullName>
        <label>How do you acquire customers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_long_has_your_business_been_open__c</fullName>
        <label>How long has your business been open?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_trucks_do_they_own__c</fullName>
        <label>How many trucks do they own?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_years_have_they_had_a_CDL__c</fullName>
        <description>Captures how many years the client had a CDL (for trucking businesses)</description>
        <label>How many years have they had a CDL?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_MCA_vs_Loans__c</fullName>
        <label>How much MCA vs. Loans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_first_postion_funding__c</fullName>
        <description>Field created for - Know your partner section</description>
        <label>How much first postion funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_inventory_do_you_have__c</fullName>
        <label>How much inventory do you have?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_new_funding__c</fullName>
        <description>Field created for - Know your partner section</description>
        <label>How much new funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>IP address of lead</description>
        <label>IP Address</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_please_explain__c</fullName>
        <label>If &quot;Other&quot; please explain:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InValid_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to track records which have invalid numbers as per DNC once the batch is done this field can be deleted</description>
        <label>InValid Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industries_you_are_focused_on__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Industries you are focused on</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Pardot_Score__c</fullName>
        <label>Initial Pardot Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_1__c</fullName>
        <label>Insurance Type 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_2__c</fullName>
        <label>Insurance Type 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_3__c</fullName>
        <label>Insurance Type 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Syndication__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Interested in Syndication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Cost__c</fullName>
        <formula>if( Mkt_Channels__c ==&quot;Internet&quot;,case(Month(DATEVALUE( CreatedDate)),1,76.35,2,72.89,3,66.51,4,60.65,5,68.60,6,13.58,7,15.58,8,35.45,36.94),if( Mkt_Channels__c ==&quot;TM&quot;,case(Month(DATEVALUE( CreatedDate)),1,75,2,75,3,0,4,0,5,20,6,20,7,0,8,16.17,23.41),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Monthly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_status__c</fullName>
        <label>Inventory status?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Raw Materials</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Finished Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Business_for_Sale__c</fullName>
        <label>Is Business for Sale?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Isconverted__c</fullName>
        <description>This field is being used for reporting, Once data is ready to be moved to Prospect Object this field can be deleted</description>
        <formula>IsConverted</formula>
        <label>Isconverted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>